<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.i012215.primerparciali012215.FormFragment">

    <!-- TODO: Update blank fragment layout -->

    <!--<include layout="@layout/toolbar"/>-->
    <LinearLayout android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:counterMaxLength="30"
    app:counterEnabled="true"
    android:theme="@style/EditTextWhite">

    <android.support.design.widget.TextInputEditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/str_nom"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:counterMaxLength="30"
        android:theme="@style/EditTextWhite">

        <android.support.design.widget.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/str_ape"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:counterMaxLength="30"
        android:theme="@style/EditTextWhite">

        <android.support.design.widget.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/str_tel"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/RaisedButtonDark"
        android:text="@string/str_btn"
        android:background="#D32F2F"/>

        <Button android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/RaisedButtonDark"
            android:text="@string/str_btn2"
            android:background="#D32F2F"/>
    </LinearLayout>
</FrameLayout>
