<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_uno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   tools:context="com.i012215.primerparciali012215.MainActivityUno">

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/borderone"
        android:paddingBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

     <ImageView
         android:id="@+id/img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/person"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_1"
            android:text="@string/str_1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_1"
            android:layout_toRightOf="@id/img_1"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:text="@string/str_2"
            android:textColor=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_2"
            android:layout_toRightOf="@id/img_1"
            android:paddingLeft="10dp"
            android:text="@string/str_3"/>
        <ImageView
            android:id="@+id/img_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_48"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"/>
    </RelativeLayout>
<!--2 item-->
    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"

        android:layout_height="80dp"
        android:background="@drawable/borderone"
        android:paddingBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/img_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_1"
            android:text="@string/str_1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_1"
            android:layout_toRightOf="@id/img_1"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:text="@string/str_2"
            android:textColor=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_2"
            android:layout_toRightOf="@id/img_1"
            android:paddingLeft="10dp"
            android:text="@string/str_3"/>
        <ImageView
            android:id="@+id/img_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_48"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"/>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
